# Design

./: .gitignore  CMakeLists.txt  README.md
abstractFactory/: AbstractFactory.hpp  CMakeLists.txt  main.cpp  readme.md
adapter/: Adapter.hpp  CMakeLists.txt  main.cpp  readme.md
bridge/: Bridge.hpp  CMakeLists.txt  main.cpp  readme.md
builder/: Builder.hpp  CMakeLists.txt  main.cpp  readme.md
chainOfResponsibility/: CMakeLists.txt  ChainOfResponsibility.hpp  main.cpp  readme.md
clone/: CMakeLists.txt  Clone.hpp  main.cpp  readme.md
command/: CMakeLists.txt  Command.hpp  main.cpp  readme.md
composite/: CMakeLists.txt  Composite.hpp  main.cpp  readme.md
decorator/: CMakeLists.txt  Decorator.hpp  main.cpp  readme.md
facade/: CMakeLists.txt  Facade.hpp  main.cpp  readme.md
factoryMethod/: CMakeLists.txt  FactoryMethod.hpp  main.cpp  readme.md
flyWeight/: CMakeLists.txt  FlyWeight.hpp  main.cpp  readme.md
interpreter/: CMakeLists.txt  Interpreter.hpp  main.cpp  readme.md
iterator/: CMakeLists.txt  Iterator.cpp  Iterator.hpp  main.cpp  readme.md
mediator/: CMakeLists.txt  Mediator.hpp  main.cpp
memento/: CMakeLists.txt  Memento.cpp  Memento.hpp  main.cpp  readme.md
observer/: CMakeLists.txt  Observer.hpp  main.cpp  readme.md
proxy/: CMakeLists.txt  Proxy.hpp  main.cpp  readme.md
simpleFactory/: CMakeLists.txt  SimpleFactor.hpp  main.cpp  readme.md
singleton/: CMakeLists.txt  Singleton.hpp  main.cpp  readme.md
state/: CMakeLists.txt  State.cpp  State.hpp  main.cpp  readme.md
strategy/: CMakeLists.txt  Strategy.hpp  main.cpp  readme.md
(+9 files in other folders)
