cmake_minimum_required(VERSION 3.15)
project(cplusplus_design_pattern)
set(CMAKE_CXX_STANDARD 11)

set(OUTPUT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin/)
message(STATUS "output dir : ${OUTPUT_DIR}")
add_subdirectory(SimpleFactory)
add_subdirectory(factoryMethod)
add_subdirectory(abstractFactory)
add_subdirectory(builder)
add_subdirectory(singleton)
add_subdirectory(clone)
add_subdirectory(proxy)
add_subdirectory(bridge)
add_subdirectory(decorator)
add_subdirectory(adapter)
add_subdirectory(facade)
add_subdirectory(composite)
add_subdirectory(flyweight)
add_subdirectory(observer)
add_subdirectory(template)